# midlight-next

./: .gitignore  AUDIT.md  MIGRATION_PLAN.md  VISION_IMPLEMENTATION.md  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
.github/workflows/: check.yml  release.yml
apps/desktop/: index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  test_utils.rs
apps/desktop/src-tauri/src/commands/: agent.rs  auth.rs  error_reporter.rs  export.rs  file_watcher.rs  fs.rs  images.rs  import.rs  llm.rs  mod.rs  rag.rs  recovery.rs  system.rs  updates.rs  versions.rs  workspace.rs
apps/desktop/src-tauri/src/services/: agent_executor.rs  auth_service.rs  checkpoint_manager.rs  docx_export.rs  docx_import.rs  embedding_service.rs  error.rs  error_reporter.rs  file_watcher.rs  image_manager.rs  import_security.rs  import_service.rs  import_transaction.rs  llm_service.rs  mod.rs  object_store.rs  rag_service.rs  recovery_manager.rs  vector_store.rs  workspace_manager.rs
apps/desktop/src-tauri/src/traits/: file_system.rs  http_client.rs  mod.rs  object_store.rs  time.rs
apps/web/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: DOCX_IMPORT_IMPLEMENTATION_PLAN.md  PHASE4_AI_INTEGRATION_PLAN.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_7_ARCHITECTURE.md  PHASE_8_IMPLEMENTATION_PLAN.md  PHASE_9_IMPLEMENTATION_PLAN.md  PHASE_9_REMEDIATION_PLAN.md
scripts/: version.sh
(+89 files in other folders)
