[package]
name = "midlight"
version = "0.1.0"
description = "AI-native document editor"
authors = ["Midlight"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "midlight_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
flate2 = "1"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
trash = "3"
# Import/Export dependencies
walkdir = "2"
rayon = "1.10"
regex = "1"
serde_yaml = "0.9"
csv = "1.3"
unicode-normalization = "0.1"
percent-encoding = "2.3"
rand = "0.8"
docx-rs = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tauri-plugin-clipboard-manager = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
futures = "0.3"
lazy_static = "1.5"
url = "2"
open = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.24.0"
